--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <a href="#"><strong>개인정보처리방침</strong></a>
                         <a href="#">이메일무단수집거부</a> <br>
                         <p>본사 : 서울특별시 마포구 양화로 122, B1/2층(서교동, LAB7) 현진홀딩스</p>
-                        <p class="copyright">Copyright © All Rights Reserved</p>
+                        <p class="copyright">Copyright © Yogerpresso All Rights Reserved</p>
                     </div><!-- text_group_footer1 끝 -->
                 </div><!-- f_text_left 끝 -->
                 <div class="f_text_right">
