--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>요거프레소</title>
     <link rel="stylesheet" href="css/02.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
     <header class="header">
@@ -60,13 +61,13 @@
     </header> <!-- 헤더 끝 -->
 
     <section class="main_visual">
-        <div class="visual_box">
-            <div class="slider">
-                <div class="slide"></div>
-                <div class="slide"></div>
-                <div class="slide"></div>
+        <div class="swiper mainSwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="img/main-visual.png" alt="메인 비주얼1"></div>
+              <div class="swiper-slide"><img src="img/main-visual2.png" alt="메인 비주얼2"></div>
+              <div class="swiper-slide"><img src="img/main-visual3.png" alt="메인 비주얼2"></div>
             </div>
-        </div><!-- visual_box 끝 -->
+          </div>
     </section><!-- main_visual 끝 -->
 
     <section class="menu_box">
@@ -316,5 +317,19 @@
             </div><!-- footer_text_group 끝 -->
         </div><!-- footer_inner 끝 -->
     </footer><!-- footer 끝 -->
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mainSwiper", {
+          slidesPerView: 1,
+          spaceBetween: 0,
+          loop: true,
+          autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
+      speed : 1000
+        });
+      </script>
 </body>
 </html>
